--- a/.github/workflows/powershell.yml
+++ b/.github/workflows/powershell.yml
@@ -11,9 +11,9 @@ name: PSScriptAnalyzer
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" , "security-scanning" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" , "security-scanning" ]
   schedule:
     - cron: '27 18 * * 1'
     
